# jlucktay.dev

./: .firebaserc  .gitattributes  .gitmodules  .markdownlint.json  .mise.toml  CNAME  README.md  config.toml  firebase.json
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: deploy-cloudflare-worker.yaml  hugo.yaml  node.js.yaml  node.js.yml
content/posts/: my-first-post.md
functions/: .eslintignore  .eslintrc.js  .gitignore  jest.config.js  package-lock.json  package.json  tsconfig.json  tslint.json
functions/src/: foo.ts  index.ts  video.ts
functions/src/__test__/: index.spec.ts
functions/test/: foo.spec.ts  video.spec.ts
go-jlucktay-dev-cf-worker/: .gitignore  .mise.toml  Cargo.toml  wrangler.toml
go-jlucktay-dev-cf-worker/src/: lib.rs
go-subdomain/: .gitignore  .terraform.lock.hcl  main.tf  variables.tf
hugo/: .gitignore  .mise.toml  config.toml  hugo.toml  hugo.yaml
hugo/content/directors/peter-jackson/: _index.md
hugo/content/posts/: christmas-movies-2024.md  github-actions-good-practices.md  my-first-post.md  the-two-towers.md
hugo/layouts/partials/: all-taxonomies.html
infra/: import.md  provider.tf  resource.project.tf  resource.project_location.tf  resource.web_app.tf
public/: index.html
